--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.rutor.team619.rutorclient">
-    <!--
-    android:hardwareAccelerated="true"
-    android:largeHeap="true"
-    -->
+    package="org.rutor.team619.rutorclient"
+    android:largeHeap="true">
+    <!--android:hardwareAccelerated="true"-->
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -27,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--
         <service
             android:name=".service.HttpServer"
             android:enabled="true"
@@ -35,6 +35,7 @@
                 <action android:name=".service.HttpServer" />
             </intent-filter>
         </service>
+        -->
     </application>
 
 </manifest>
